cmake_minimum_required(VERSION 3.23)
project(libbase122 LANGUAGES C)
add_executable(testconsumer testconsumer.c)
if (NOT DEFINED LIBBASE122_USE_SHARED)
    message(FATAL_ERROR "LIBBASE122_USE_SHARED not defined. Define to TRUE or FALSE.")
endif ()

if (LIBBASE122_USE_CONFIG_FILE)
    message (STATUS "Trying to find libbase122 with CMake config file...")
    find_package (Base122 REQUIRED)
    if (LIBBASE122_USE_SHARED)
        target_link_libraries (testconsumer base122::shared)
    else ()
        target_link_libraries (testconsumer base122::static)
    endif () # LIBBASE122_USE_SHARED
elseif (WIN32)
    if (NOT DEFINED LIBBASE122_INSTALL_PATH)
        message(FATAL_ERROR "LIBBASE122_INSTALL_PATH not defined. Define with install path to libbase122.")
    endif ()

    message (STATUS "Trying to find libbase122 at path ${LIBBASE122_INSTALL_PATH}")
    # Convert a Windows path (e.g. C:\foo\bar) to a CMake path (e.g. C:/foo/bar)
    file(TO_CMAKE_PATH "${LIBBASE122_INSTALL_PATH}" LIBBASE122_INSTALL_PATH)
    message(STATUS "${LIBBASE122_INSTALL_PATH}")
    if (LIBBASE122_USE_SHARED)
        target_link_libraries(testconsumer PRIVATE "${LIBBASE122_INSTALL_PATH}/lib/base122_shared.lib")
    else ()
        target_link_libraries(testconsumer PRIVATE "${LIBBASE122_INSTALL_PATH}/lib/base122.lib")
    endif ()
    target_include_directories(testconsumer PRIVATE "${LIBBASE122_INSTALL_PATH}/include")
endif ()